<resources>
    <string name="app_name">BudgetBuzz</string>
    <string name="welcome_to_budget_planner">Welcome to Budget Planner</string>
    <string name="take_control_of_your_money_and_save_them_by_tracking_your_expenses">Take control of your money and save them by tracking your expenses</string>
    <string name="onboarding_illustrations">OnBoarding Illustrations</string>
    <string name="budgetbuzz">BudgetBuzz</string>
    <string name="get_started">Get Started</string>
    <string name="let_s_get_started">Let\'s get started</string>
    <string name="what_is_your_mobile_number">What is your mobile number?</string>
    <string name="continue_btn">Continue</string>
    <string name="verification_code">Verification Code</string>
    <string name="enter_the_verification_code_sent_to">Enter the verification code sent to\n%1$s</string>
    <string name="resend">Resend Otp</string>
    <string name="verify_otp">Verify Otp</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="create_passcode">Create Passcode</string>
    <string name="confirm_passcode">Confirm Passcode</string>
    <string name="more_about_you">More about you</string>
    <string name="it_look_s_great">It look\'s great :)</string>
    <string name="add_your_personal_details">Add your personal details</string>
    <string name="verify_passcode">Verify Passcode</string>
    <string name="verify">Verify</string>
    <string name="used_for_logging_in">Used for logging in</string>
    <string name="create_pin">Create Pin</string>
    <string name="profile_pic">profile pic</string>
    <string name="change_pic_button">change pic button</string>
    <string name="fist_and_last_name">Fist and Last name</string>
    <string name="email_address">Email Address</string>
    <string name="select_a_category">Select a category</string>
    <string name="activity">Activity</string>
    <string name="overview">Overview</string>
    <string name="budget">Budget</string>
    <string name="profile">Profile</string>
    <string name="category_icon">Category Icon</string>
    <string name="cancel">Cancel</string>
    <string name="minusSign">-</string>
    <string name="currencySign">₹</string>
    <string name="amount_hint_000">000</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="details">Details</string>
    <string name="selectedCategoryicon">selectedCategoryIcon</string>
    <string name="noteIcon">NoteIcon</string>
    <string name="transaction_note">Transaction Note</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="calendarIcon">calendarIcon</string>
    <string name="you_don_t_have_any_transactions_nright_now_but_you_can">You don’t have any transactions\nright now, but you can</string>
    <string name="start_adding_one_by_pressing_nthe_plus_icon_from_the_bottom_menu">Start adding one by pressing\nthe plus icon from the bottom menu</string>
    <string name="plusSign">+</string>
    <string name="earned">Earned</string>
    <string name="incomes_this_month">Income this month</string>
    <string name="expense_this_month">Expense this month</string>
    <string name="spent">Spent</string>
    <string name="no_transaction_image">No Transaction Image</string>
    <string name="zero">0</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="you_don_t_have_any_transactions_n_in_selected_filter">You don’t have any transactions\n in selected filter</string>
    <string name="clear">Clear</string>
    <string name="filter_icon">Filter icon</string>
    <string name="save">Save</string>
    <string name="deficit_of">Deficit of:</string>
    <string name="net_earning">Net Earning:</string>
    <string name="spent_so_far">Spent So Far</string>
    <string name="edit">Edit</string>
    <string name="general">General</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="change_passcode">Change Passcode</string>
    <string name="notifications">Notifications</string>
    <string name="categories">Categories</string>
    <string name="other">Other</string>
    <string name="rate_the_app">Rate the App</string>
    <string name="support">Support</string>
    <string name="share">Share</string>
    <string name="terms_and_policy">Terms and Policy</string>
    <string name="logout">Logout</string>
    <string name="all">ALL</string>
    <string name="add_budget">Add Budget</string>
    <string name="budget_details">Budget Details</string>
    <string name="my_budget">My Budget</string>
    <string name="keep_spending_you_can_spend">Keep spending :). You can spend</string>
    <string name="each_day_for_the_rest_of_the_period">Each day for the rest of the period</string>
    <string name="cash_flow_so_far">Cash Flow So far</string>
    <string name="spent_avg_day">Spent Avg/Day</string>
    <string name="best_day">Best Day</string>
    <string name="worst_day">Worst Day</string>
    <string name="weekly_budget_spend">Weekly Budget Spend</string>
    <string name="week_1">Week 1</string>
    <string name="week_2">Week 2</string>
    <string name="week_3">Week 3</string>
    <string name="week_4">Week 4</string>
    <string name="week_5">Week 5</string>
    <string name="enter_email_and_password">Enter Email and Password</string>
    <string name="password">Password</string>
    <string name="you_have_exceeded_your_budget">You have exceeded your budget</string>
    <string name="sad_smile">:(</string>
    <string name="you_can_t_spend_anymore">You can\'t spend anymore</string>
</resources>